  * please provide gui for security manifest (LP: #1221407)
  * Cannot enable developer mode on read-only image (LP: #1223301)
  * Cannot launch application through qtcreator (LP: #1225178)
  * Application installation script problems (LP: #1213902)
  * Comment field in .desktop file should be generated on the fly (LP: #1223388)

 -- Juhapekka Piiroinen <juhapekka.piiroinen@canonical.com>  Wed, 18 Sep 2013 15:36:58 +0300

qtcreator-plugin-ubuntu (2.7.2-0ubuntu2) saucy; urgency=low

  [ Zoltan Balogh ]
  * Fix app id and the dbus session adress (LP: #1221414).
  * Use pkcon to install click packages (LP: #1223014)

  [ Timo Jyrinki ]
  * Add Cordova dependencies to the Cordova plugin (LP: #1209385)
  * Recommend ubuntu-sdk from qtcreator-plugin-ubuntu (LP: #1198084)

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 16 Sep 2013 08:58:21 +0300

qtcreator-plugin-ubuntu (2.7.2-0ubuntu1) saucy; urgency=low

  [ Juhapekka Piiroinen ]
  * Move the plugin code from qtcreator source package to here, fix install
  * Depend on qtcreator-dev

  [ Zoltán Balogh ]
  * Fixing the build dependencies

  [ Timo Jyrinki ]
  * Follow Qt Creator version numbering but slightly higher to allow upgrades
  * Move icon out of debian/ directory
  * Remove provides/conflicts/replaces for old PPA ubuntu-qtcreator-plugins
  * Clean out packaging with wrap-and-sort -a -t
  * Add recommended cflags and QT_SELECT to debian/rules
  * Make dependencies stricter. Require Qt Creator >= 2.7.1 and recommend 
    the plugins from the -common packages.
  * A file moved from ubuntu plugin package to cordova plugin package, adding 
    Replaces.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Fri, 06 Sep 2013 07:12:02 +0300

qtcreator-plugin-ubuntu (0.1-0ubuntu3) saucy; urgency=low

  * The Cordova project type in the template definition file had a typo. The
    fileName was wrongly filename. So the .desktop file was not created. 
    (LP: #1216046)
