@@ -109,6 +109,7 @@ const char UBUNTU_ACTION_PROJECTFILES[] = "%PROJECTFILES%";
 const char UBUNTU_ACTION_SCRIPTDIRECTORY[] = "%SCRIPTDIRECTORY%";
 const char UBUNTU_ACTION_SHAREDIRECTORY[] = "%SHAREDIRECTORY%";
 const char UBUNTU_ACTION_SERIALNUMBER[] = "%SERIALNUMBER%";
+const char UBUNTU_ACTION_BZR_USERNAME[] = "%BZR_USERNAME%";
 
 const char UBUNTU_FILENAME_DISPLAYNAME[] = "displayName";
 const char UBUNTU_FILENAME_DISPLAYNAME_LOWER[] = "displayName_lower";
