@@ -12,6 +12,7 @@ qtcreator-plugin-ubuntu (2.7.2-0ubuntu3) precise; urgency=low
   * Cannot launch application through qtcreator (LP: #1225178)
   * Application installation script problems (LP: #1213902)
   * Comment field in .desktop file should be generated on the fly (LP: #1223388)
+  * SDK should set applicationName to "name" value in the click manifest (LP: #1227085)
 
  -- Juhapekka Piiroinen <juhapekka.piiroinen@canonical.com>  Wed, 18 Sep 2013 15:36:58 +0300
 
